<?xml version="1.0"?>
<package format="3">
  <name>my_py_node</name>
  <version>0.0.1</version>
  <description>Simple Python ROS2 node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
